--- a/src/main/resources/templates/kty/find/daegu_room.html
+++ b/src/main/resources/templates/kty/find/daegu_room.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <link rel="stylesheet" href="/css/kty3.css">
+<link rel="stylesheet" href="/css/kty.css">
 </head>
 <body id="userinfo_modify" onload="showPosition()">
-	
 <html layout:decorate="~{jjj/header}">
-<div id="test" layout:fragment="content" class="container my-3"><div id="kty_left-side_test">
+<div id="test" layout:fragment="content" class="container my-3">
+	<div id="kty_left-side_test">
 		<div class="search_deagu_home">
 			<div class="search_kw">
 				<input type="text" id="search_kw" class="form-control2"
@@ -150,8 +151,8 @@
 					</div>
 					<div class="hotel_sectors_hk">
 						<span th:text="${accommodations.acc_sectors}"
-							style="font-size: 15px; color: grey;"> </span>
-					</div>
+							style="color: grey;"> </span>
+					
 
 					<div class="hotel_rating_hk">
 						<span th:switch="${accommodations.acc_rating}"
@@ -159,45 +160,39 @@
 							<span th:case="2">★ ★ ✩ ✩ ✩</span> <span th:case="3">★ ★ ★
 								✩ ✩</span> <span th:case="4">★ ★ ★ ★ ✩</span> <span th:case="5">★
 								★ ★ ★ ★</span> <span th:case="0">✩ ✩ ✩ ✩ ✩</span>
-						</span>&nbsp </span>
-					
-						<span
+						</span>&nbsp </span> <span
 							th:text="${accommodations.acc_rating != 0 ? accommodations.acc_rating:''}"
-							style="font-size: 13px;"></span>
+							></span>
+					</div>
 					</div>
 					<div class="hotel_reviews_hk">
-							 <span
-							style="font-size: 12px; font-weight: bold;"
+						<span
 							th:if="${#lists.size(accommodations.reviews) > 0}"
 							th:text="'(' + ${#lists.size(accommodations.reviews)} + ')'"></span>
-					</div>							
+					</div>
 					<div class="hotel_address_hk">
 						<span th:text="${accommodations.acc_address}"
-							style="font-size: 15px;"></span>
+							></span>
 					</div>
 					<div class="hotel_max_people_hk">
-							<span style="font-size: 15px;">투숙
-							인원 (최대) : </span>&nbsp <span th:text="${accommodations.acc_max_people}"
-							style="font-size: 15px;"></span><span style="font-size: 15px;">
-							명 </span><span style="color: red; font-size: 12px; font-weight: bold;"></span>
+						<span>투숙 인원 (최대) : </span>&nbsp <span
+							th:text="${accommodations.acc_max_people}"
+							></span><span>
+							명 </span>
+<!-- 							<span style="color: red; font-size: 12px; font-weight: bold;"></span> -->
 					</div>
 
 					<div class="hotel_averPrice_hk">
-						<span class="feefee"> <span
-							style="font-size: 20px; font-weight: bold;">평균금액 : </span>&nbsp&nbsp
+						<span class="feefee"> <span>평균금액: </span>&nbsp&nbsp
 							<span class="productAmount"
-							th:text="${accommodations.acc_averPrice}"
-							style="font-size: 20px; font-weight: bold;"></span> &nbsp <span
-							style="font-size: 20px; font-weight: bold;"> 원</span>&nbsp&nbsp
+							th:text="${accommodations.acc_averPrice}"></span> &nbsp
+							<span> 원</span>&nbsp&nbsp
 						</span>
 					</div>
-
-
-
-				</a>
-				<div class="room-photo"
-					th:style="'background-image: url(' + ${accommodations.acc_img} + ');'"></div>
 			</div>
+			<div class="room-photo"
+				th:style="'background-image: url(' + ${accommodations.acc_img} + ');'"></div>
+			</a>
 
 
 
@@ -535,7 +530,7 @@
          </form>
          -->
 	</div>
-</body>
+	</body>
 
-<script th:src="@{/js/kty_filter2.js}"></script>
+	<script th:src="@{/js/kty_filter2.js}"></script>
 </html>
