--- a/src/main/resources/static/css/admin_notice.css
+++ b/src/main/resources/static/css/admin_notice.css
@@ -23,11 +23,11 @@ h3 {
 	font-weight: bold;
 }
 
-.container{
+.container {
 	margin: 10px auto !important;
-    width: 100% !important;
-    height: 100% !important;
-    padding-left: 340px !important;
+	width: 100% !important;
+	height: 100% !important;
+	padding-left: 340px !important;
 }
 
 table {
@@ -35,7 +35,8 @@ table {
 	border-collapse: collapse;
 }
 
-th, td {
+th,
+td {
 	padding: 8px;
 	text-align: left;
 	border-bottom: 1px solid #ddd;
@@ -49,48 +50,51 @@ form {
 	display: inline-block;
 }
 
-.notice_hk{
+.notice_hk {
 	top: 30px;
-    position: relative;
-	
+	position: relative;
+
 }
 
- .notice_btn {
-    display: flex;
-    justify-content: flex-end;
+.notice_btn {
+	display: flex;
+	justify-content: flex-end;
 }
 
 /*  버튼 스타일 */
-  .modi_btn {
-    background-color: var(--sub-color);
-    color: #fff;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-    text-decoration: none;
-    border-radius: 5px;
-  }
-  .del_btn {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-    text-decoration: none;
-    border-radius: 5px;
-  } 
-  
-  .del_btn:hover{
-	  background-color: rgb(100, 177, 255);
-  }
-  
-.notice_hk .notice-item .notice-content .button {
-  display: flex; /* 버튼을 블록 레벨 요소로 만들어 수직 배치합니다. */
-  margin-top: 10px; /* 버튼 사이에 간격을 추가합니다. */
+.modi_btn {
+	background-color: var(--sub-color);
+	color: #fff;
+	border: none;
+	padding: 5px 10px;
+	cursor: pointer;
+	text-decoration: none;
+	border-radius: 5px;
 }
 
-.btn_createNotice{
-	
+.del_btn {
+	background-color: #007bff;
+	color: #fff;
+	border: none;
+	padding: 5px 10px;
+	cursor: pointer;
+	text-decoration: none;
+	border-radius: 5px;
+}
+
+.del_btn:hover {
+	background-color: rgb(100, 177, 255);
+}
+
+.notice_hk .notice-item .notice-content .button {
+	display: flex;
+	/* 버튼을 블록 레벨 요소로 만들어 수직 배치합니다. */
+	margin-top: 10px;
+	/* 버튼 사이에 간격을 추가합니다. */
+}
+
+.btn_createNotice {
+
 	float: right;
 	bottom: 50px;
 }
@@ -183,7 +187,8 @@ span.role-ADMIN {
 	color: #333;
 }
 
-.close-modal:hover, .close-modal:focus {
+.close-modal:hover,
+.close-modal:focus {
 	color: #000;
 }
 
@@ -237,7 +242,10 @@ span.role-ADMIN {
 	width: 120px;
 }
 
-#editNickname, #editZipcode, #editAddress1, #editAddress2 {
+#editNickname,
+#editZipcode,
+#editAddress1,
+#editAddress2 {
 	padding: 5px;
 	border: 1px solid #ccc;
 	border-radius: 3px;
@@ -255,16 +263,16 @@ span.role-ADMIN {
 	cursor: pointer;
 }
 
-.create_notice_btn{
-margin-top: 20px;	
-	
-}
+.create_notice_btn {
+	margin-top: 20px;
 
+}
 
 .content-container {
 	margin: 0 200px;
 	max-width: 900px;
 }
+
 .notice-item {
 	border-bottom: 1px solid #ccc;
 	margin-top: 20px;
@@ -273,12 +281,11 @@ margin-top: 20px;
 }
 
 
-
 .notice-content {
 	display: none;
 	background-color: rgb(248, 248, 248);
 	padding: 5px 15px;
-	margin-bottom: 10px;
+	white-space: pre-line;
 }
 
 .pagination ul {
@@ -309,11 +316,11 @@ h2 {
 }
 
 #title {
-	    width: 900px;
-	    height: 30px;
-	    padding: 1px 8px;
-	    margin: 10px 0px;
-	    border-radius: 3px;
+	width: 900px;
+	height: 30px;
+	padding: 1px 8px;
+	margin: 10px 0px;
+	border-radius: 3px;
 }
 
 
@@ -321,18 +328,27 @@ label {
 	float: left;
 }
 
-.ck ck-toolbar__items{
-	margin-top: 10px;
+p {
+    margin: 0;
+}
+
+button:hover {
+    background: var(--hover-color);
 }
 
 
-.ck-rounded-corners .ck.ck-editor__top .ck-sticky-panel .ck-toolbar, .ck.ck-editor__top .ck-sticky-panel .ck-toolbar.ck-rounded-corners{
-	margin-top: 10px;
+.ck-editor__editable {
+	min-height: 500px;
 }
 
-.ck-rounded-corners .ck.ck-editor__main>.ck-editor__editable, .ck.ck-editor__main>.ck-editor__editable.ck-rounded-corners{
-		 height: 600px;
-	 }
+.img_hk {
+	margin: 15px 0;
+}
 
+.img {
+	margin-right: 20px;
+}
 
-
+input #title {
+	height: 30px;
+}
