--- a/src/main/resources/static/css/inquiry_answer.css
+++ b/src/main/resources/static/css/inquiry_answer.css
@@ -71,6 +71,7 @@
 		.answer-container {
 			background-color: rgb(233, 233, 233);
 			border-radius: 7px;
+			margin-bottom: 20px;
 		}
 		
 		.notice_btn{
