--- a/src/main/resources/static/css/my_inquiry.css
+++ b/src/main/resources/static/css/my_inquiry.css
@@ -1,6 +1,6 @@
 .my-inquiry {
-         width: 900px;
-         margin-left: -50px;
+         width: 800px;
+         margin-left: -30px;
          margin-top: 40px;
       }
 
@@ -36,7 +36,6 @@
 
       .answer-content {
          margin-left: 50px;
-         padding-bottom: 30px;
       }
 
 
@@ -151,4 +150,11 @@
    
    .swal2-styled.swal2-confirm {
     background-color: #7367f0 !important;
+}
+ p{
+	 background-color: #f2f2f2;
+	 margin : 0px;
+	 padding: 10px 15px;
+	 white-space: pre-line;
+	 border-radius: 7px;
 }
