--- a/src/main/resources/templates/syw/adminNotice_list.html
+++ b/src/main/resources/templates/syw/adminNotice_list.html
@@ -17,23 +17,28 @@
 		<div class="content-container">
 			<h1>공지사항</h1>
 
+
+
 			<button onclick="window.location.href='/admin/createNotice'" class="btn_createNotice">글쓰기</button>
 			<div class="notice_hk">
 				<div th:each="notice : ${page}" class="notice-item">
 					<h3 id="title" th:text="${notice.title}"></h3>
 					<p class="date" th:text="${#temporals.format(notice.createDate, 'yyyy-MM-dd HH:mm')}"></p>
 					<div class="notice-content">
-						<p th:utext="${notice.content}"></p>
-					</div>
-					<div class="notice_btn">
+						<p class="noticeContent" th:utext="${notice.content}"></p>
+						<!-- 이미지 경로를 Thymeleaf 태그로 불러옴 -->
+						<div class="notice_img" th:if="${notice.imagePath}">
+							<img th:if="${notice.imagePath}"
+								th:src="@{/img/notice_img/{imageName}(imageName=${notice.imagePath})}" alt="이미지 없음"
+								width="100%" height="80%" />
+						</div>
+						<div class="notice_btn">
 						<button class="modi_btn"
 							th:onclick="'window.location.href=\'/admin/modify/' + ${notice.id} + '\''">수정</button>
 						<button class="del_btn" th:data-id="${notice.id}">삭제</button>
 					</div>
-
-
+					</div>
 				</div>
-
 				<div class="pagination" th:if="${page.totalElements > 0}">
 					<ul>
 						<li class="page-item" th:if="${page.number > 0}"><a class="page-link" href="#"
