--- a/src/main/resources/templates/syw/my_inquiry.html
+++ b/src/main/resources/templates/syw/my_inquiry.html
@@ -63,9 +63,7 @@
 					<h4>
 						<span class="answer-prefix">└></span> 답변 </span>
 					</h4>
-					<p th:text="${answer.message}"
-						style="background-color: #f2f2f2; padding: 20px; white-space: pre-line; border-radius: 7px;">
-					</p>
+					<p th:text="${answer.message}"></p>
 					<span class="date" style="font-size: 13px; color: rgb(193, 193, 193);"> <span
 							th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></span>
 				</div>
