--- a/src/main/resources/templates/syw/notice_modify.html
+++ b/src/main/resources/templates/syw/notice_modify.html
@@ -2,7 +2,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>DAEBAK</title>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="/css/admin_notice.css">
@@ -15,7 +14,7 @@
 	<div layout:fragment="adminNav" class="container my-3">
 		<div class="content-container">
 			<h1>공지사항 수정</h1>
-			<form method="post" th:action="@{/admin/modify/{id}(id=${notice.id})}">
+			<form method="post" th:action="@{/admin/modify/{id}(id=${notice.id})}" enctype="multipart/form-data">
 				<div class="notice_title">
 					<label for="title">공지사항 제목</label> <input type="text" id="title" name="title"
 						th:value="${notice.title}" required>
@@ -26,17 +25,59 @@
 					<textarea id="content" name="content" rows="40" data-editor="ckeditor" required
 						th:text="${notice.content}">
 				</textarea>
+
+
+					<div class="img_hk">
+						<label for="image" class="img">이미지 업로드 : </label> <input type="file" id="image" name="image"
+							accept="image/jpeg, image/png">
+					</div>
 				</div>
-				<input type="submit" value="등록" class="create_notice_btn">
+				<input type="submit" value="등록" onclick="convertContent()" class="create_notice_btn">
 			</form>
 		</div>
 
 
 		<script>
-			ClassicEditor
-				.create(document.querySelector('[data-editor="ckeditor"]'), {
-					language: "ko"
+			ClassicEditor.create(document.querySelector('[data-editor="ckeditor"]'), {
+				language: "ko",
+				enterMode: 2,
+				shiftEnterMode: 1,
+				removePlugins: ['Indent'],
+				autoParagraph: false,
+				toolbar: {
+					items: [
+						'heading',
+						'|',
+						'bold',
+						'italic',
+						'underline',
+						'link',
+						'bulletedList',
+						'numberedList',
+						'blockQuote',
+						'alignment',
+						'undo',
+						'redo',
+					]
+				}
+			})
+				.then(editor => {
+					// Editor configuration and change events remain the same
+					editor.model.document.on('change:data', () => {
+						let editorData = editor.getData();
+						editorData = editorData.replace(/<p>/g, '').replace(/<\/p>/g, '');
+						document.getElementById('hiddenContent').value = editorData;
+					});
+				})
+				.catch(error => {
+					console.error(error);
 				});
+
+			function convertContent() {
+				let editorData = CKEDITOR.instances.content.getData();
+				editorData = editorData.replace(/<p>/g, '').replace(/<\/p>/g, '');
+				document.getElementById('hiddenContent').value = editorData;
+			}
 		</script>
 </body>
 
