--- a/src/main/resources/templates/kty/signup_form.html
+++ b/src/main/resources/templates/kty/signup_form.html
@@ -20,7 +20,7 @@
 			<h4 class="join_title">DAE BAK</h4>
 		</div>
 	</div>
-	<form th:action="@{/user/signup}" th:object="${userCreateForm}" method="post">
+<form th:action="@{/user/signup}" th:object="${userCreateForm}" method="post">
 		<div th:if="${#fields.hasGlobalErrors()}" th:each="err : ${#fields.globalErrors()}" class="alert alert-danger"
 			role="alert" th:text="${err}"></div>
 		<div class="mb-join">
@@ -28,7 +28,8 @@
 			<input type="text" th:field="*{username}" id="join_username" class="join_username"
 				placeholder="6-12 길이의 문자열 입력">
 		</div>
-		<div id="nickname-error"></div><br>
+		<div id="username-error"></div>
+		<br>
 		<div class="mb-join">
 			<label for="password1" class="form-label">비밀번호</label>
 			<input type="password" th:field="*{password1}" id="join_password1" class="join_password1"
