--- a/src/main/resources/templates/pyr/productNewMainReg.html
+++ b/src/main/resources/templates/pyr/productNewMainReg.html
@@ -11,24 +11,17 @@
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.6/dist/sweetalert2.min.css">
 
-
 <title>상품등록</title>
-
-
 	</head>
-
 	<body>
-
 		<div id="addMainPdregistration">
 			<h1>숙박업소 등록</h1>
 
-			<form id="productForm" method="post" enctype="multipart/form-data"
-				action="/partner/product/productNewMainReg">
+
+			<form id="productForm">
 				<div id="namdAddrSecFlex">
 					<div id="nameAndAddr">
 						<div class="acc_name_fild">
-							<!-- 		<label for="acc_name">숙소 이름 :</label> <input type="text"
-								id="acc_name" name="acc_name"> -->
 							<label for="acc_name">숙소 이름 : </label> <input type="text"
 								id="acc_name" name="acc_name" th:value="${companyName}" readonly />
 						</div>
@@ -36,9 +29,6 @@
 							<label for="acc_address">숙소 주소 :</label> <input type="text"
 								id="acc_address" name="acc_address" th:value="${companyAdd}"
 								readonly>
-							<!-- 							<label for="acc_address">숙소 주소 :</label> <input type="text"
-								id="acc_address" name="acc_address" th:value="companyAdd"
-								readonly> -->
 						</div>
 
 						<div class="acc_max_peop_field">
@@ -49,38 +39,11 @@
 
 					</div>
 
-					<!-- 		<div id="sectors">
-						<label for="acc_sectors">업종 선택</label> <select
-							id="partner_sectors" name="acc_sectors" style="font-size: 16px;">
-							<option value="" disabled selected hidden>선택하세요</option>
-							<option value="모텔">모텔</option>
-							<option value="호텔">호텔</option>
-							<option value="리조트">리조트</option>
-							<option value="펜션">펜션</option>
-							<option value="게스트하우스">게스트하우스</option>
-						</select>
-					</div>
-				 -->
-
 					<div id="sectors">
 						<label for="acc_sectors">숙박 업종</label> <input type="text"
 							id="partner_sectors" name="acc_sectors" th:value="${companySec}"
 							readonly />
 					</div>
-
-
-					<!-- 	<div id="sectors">
-						<label for="acc_sectors">업종</label> <select id="partner_sectors"
-							name="acc_sectors" style="font-size: 16px;">
-							<option value="" disabled selected hidden>선택하세요</option>
-							<option value="모텔" th:selected="${companySec == '모텔'}">모텔</option>
-							<option value="호텔" th:selected="${companySec == '호텔'}">호텔</option>
-							<option value="리조트" th:selected="${companySec == '리조트'}">리조트</option>
-							<option value="펜션" th:selected="${companySec == '펜션'}">펜션</option>
-							<option value="게스트하우스" th:selected="${companySec == '게스트하우스'}">게스트하우스
-							</option>
-						</select>
-					</div> -->
 
 				</div>
 
