--- a/src/main/resources/templates/kty/modify_partner_regi.html
+++ b/src/main/resources/templates/kty/modify_partner_regi.html
@@ -71,6 +71,41 @@
 						th:href="@{/user/mypage/partner_reg}" class="btn_red">파트너 등록하기</a>
 				</div>
 			</table>
+			
+			
+			
+			
+			
+			  <!-- 페이징처리 시작 -->
+<div th:if="${!paging.isEmpty()}">
+    <ul class="pagination-horizontal justify-content-center">
+        <!-- Previous page link -->
+        <li class="page-item" th:class="${!paging.hasPrevious} ? 'disabled'">
+            <a class="page-link" th:if="${paging.hasPrevious}" th:href="@{|?page=${paging.number-1}|}">
+                <span>이전</span>
+            </a>
+        </li>
+
+        <!-- Page links -->
+        <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
+            th:class="${page == paging.number} ? 'active' : ''" 
+            class="page-item">
+            <a th:text="${page + 1}" class="page-link" th:href="@{|?page=${page}|}"></a>
+        </li>
+
+        <!-- Next page link -->
+        <li class="page-item" th:class="${!paging.hasNext} ? 'disabled'">
+            <a class="page-link" th:if="${paging.hasNext}" th:href="@{|?page=${paging.number+1}|}">
+                <span>다음</span>
+            </a>
+        </li>
+    </ul>
+</div>
+    <!-- 페이징처리 끝 -->
+			
+			
+
+			
 		</div>
 		<!-- 사이드 바 -->
 	<nav id="mypage_sidebar_nav">
@@ -119,7 +154,24 @@
 		}
 	</script>
 
+<style>
+.pagination-horizontal {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        padding: 0;
+        margin-top:600px;
+        margin-left:330px;
+    }
 
+    .pagination-horizontal li {
+        margin: 0 5px;
+    }
+
+
+
+</style>
 </body>
 
 
