파트너 신청 내역 페이징 처리

--- a/src/main/resources/static/css/result_partner_kty.css
+++ b/src/main/resources/static/css/result_partner_kty.css
@@ -36,3 +36,7 @@ td, th {
     .pagination-horizontal li {
         margin: 0 5px;
     }
+ .active-page {
+        color: red;
+        font-weight: bold;
+    }
