--- a/src/main/resources/templates/kty/modify_partner_regi.html
+++ b/src/main/resources/templates/kty/modify_partner_regi.html
@@ -86,14 +86,13 @@
             </a>
         </li>
 
-        <!-- Page links -->
         <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
             th:class="${page == paging.number} ? 'active' : ''" 
             class="page-item">
-            <a th:text="${page + 1}" class="page-link" th:href="@{|?page=${page}|}"></a>
+            <a th:text="${page + 1}" class="page-link" th:class="${page == paging.number} ? 'active-page' : ''" th:href="@{|?page=${page}|}"></a>
         </li>
 
-        <!-- Next page link -->
+   
         <li class="page-item" th:class="${!paging.hasNext} ? 'disabled'">
             <a class="page-link" th:if="${paging.hasNext}" th:href="@{|?page=${paging.number+1}|}">
                 <span>다음</span>
