--- a/src/main/resources/templates/kty/my_booking.html
+++ b/src/main/resources/templates/kty/my_booking.html
@@ -430,7 +430,7 @@ cancelBtns.forEach(cancelBtn => {
 	    var newWindowWidth = 950;
 	    var newWindowHeight = 800;
 
-	    var leftPosition = (screenWidth - newWindowWidth) / 2;
+	    var leftPosition = (screenWidth - newWindowWidth) / 2+80;
 	    var topPosition = (screenHeight - newWindowHeight) / 2;
 
 	    var newWindow = window.open('', '_blank', `width=${newWindowWidth},height=${newWindowHeight},left=${leftPosition},top=${topPosition}`);
