--- a/src/main/resources/templates/pyr/product_detail.html
+++ b/src/main/resources/templates/pyr/product_detail.html
@@ -102,6 +102,10 @@
 									th:text="${product.product_amount}"></strong><strong
 									id="totalAmount_won">원 </strong>
 							</div>
+							<div>
+							<strong>최대 수용 인원 -  <span th:text="${product.product_pernum}"></span>명</strong>
+							
+							</div>
 							<!-- <button type="button" onclick="pop_room_detail()">" 객실
                         이용 안내"</button> -->
 							<!-- <button type="button"> 판매완료 </button> -->
