--- a/src/main/resources/templates/kdg/reserve.html
+++ b/src/main/resources/templates/kdg/reserve.html
@@ -859,6 +859,7 @@ input[type="checkbox"].inp_chk_02 {
     								                input_tel.disabled = false
     		    									tel_btn.innerText = '재전송';
     								                tel_btn.style.backgroundColor = "red";
+    								                verificationCodeDiv.style.display = 'none';
     								            }
     								        }, 1000);
     								        isRunning = true;
@@ -977,6 +978,16 @@ input[type="checkbox"].inp_chk_02 {
 		    						    });
 		    						    
 		    						})
+		    						
+		    						window.onload = function() {
+		    							const input_tel = document.getElementById("tel")
+		    							tel_btn.style.backgroundColor = "red";
+    									input_tel.disabled = false;
+    									
+    									const tel_btn = document.getElementById("code_btn")
+    									document.getElementById('digit').innerText = ''; // -> 이거 안먹히는 듯
+    									tel_btn.disabled = false
+		    						}
 		    						
 		    						 // 모달부분 //   
 		    				    function openModal() {
