--- a/src/main/resources/templates/kty/my_booking.html
+++ b/src/main/resources/templates/kty/my_booking.html
@@ -2,168 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<style>
-#container {
-	display: flex;
-	padding: 15px;
-	background: #fff;
-	border: 1px solid grey;
-	border-radius: 4px;
-	box-sizing: border-box;
-	margin-bottom: 15px;
-}
-
-#left {
-	background-color: gray;
-	display: inline-block;
-	width: 300px;
-	height: 200px;
-	cursor: pointer;
-	border-radius: 4px;
-}
-
-#right {
-	width: 447px;
-	margin-left: 14px;
-	text-align: center;
-}
-
-#right b {
-	font-size: 20px;
-}
-
-.cancelBtn {
-	width: 50%;
-	height: 36px;
-	border: none;
-	font-size: 15px;
-	line-height: 36px;
-	color: #fff;
-	background-color: #e61c51;
-	text-align: center;
-	cursor: pointer;
-	border-radius: 4px 4px 4px 4px;
-	margin-top: 18px;
-	font-weight: bold;
-	margin-left:10px;
-}
-
-
-#cancelBtn2 {
-	margin-left:-10px;
-	width: 50%;
-	height: 36px;
-	border: none;
-	font-size: 15px;
-	line-height: 36px;
-	color: #fff;
-	background-color: orange;
-	text-align: center;
-	cursor: pointer;
-	margin-top: 18px;
-	font-weight: bold;
-	margin-left:0px;
-}
-
-/* 스타일링을 추가할 클래스들에 적절한 스타일을 정의 - 타임리프 조건에 따라 적용 */
-.gray-filter {
-	filter: grayscale(100%);
-}
-
-.gray-text {
-	color: gray;
-}
-
-.gray-button {
-	background-color: gray;
-	color: white;
-	width: 50%;
-	height: 36px;
-	border: none;
-	font-size: 15px;
-	line-height: 36px;
-	text-align: center;
-	cursor: pointer;
-	margin-left:-5px;
-	margin-top: 18px;
-	font-weight: bold;
-	pointer-events: none; /* 버튼 클릭 비활성화 */
-}
-
-#p-right {
-	margin: 0;
-}
-
-.center-content {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	margin-top: -250px;
-	margin-left: 300px;
-	/* You can add more styling as needed */
-	height: 100vh;
-	/* This will center the content vertically within the viewport */
-}
-
-
-.btn_red {
-	display: inline-block;
-	padding: 10px 20px;
-	border: none;
-	border-radius: 4px;
-	background-color: #ff0000; /* Red color for the button */
-	color: #fff; /* Text color for the button */
-	text-decoration: none; /* Remove underline for the link */
-	font-size: 16px;
-	font-weight: bold;
-
-}
-
-.btn_red:hover {
-	background-color: #cc0000;
-} 
- #cancelBtn2.disabled {
-    filter: grayscale(100%);
-    cursor: not-allowed;
-    /* Add any additional styles you want for the disabled state */
-  }
-  
-
-  .gray-button {
-  /* Add your grayscale styles here */
-  filter: grayscale(100%);
-  /* Add any other styles for the grayed-out appearance */
-}
-
-#cancelBtn.cancelBtn3 {
-    background-color: blue;
-    width: 50%;
-	height: 36px;
-	border: none;
-	font-size: 15px;
-	line-height: 36px;
-	color: #fff;
-	text-align: center;
-	cursor: pointer;
-	border-radius: 4px 4px 4px 4px;
-	margin-top: 18px;
-	font-weight: bold;
-}
-#book_accID{
-display:none;
-}
-#book_roomID{
-display:none;
-}
-
-#intro_acc{
-color:grey;
-}
-.gray-button {
-  filter: grayscale(100%);
-}
-</style>
+<link rel="stylesheet" href="/css/my_booking.css">
 </head>
 
 <body id="userinfo_modify">
