--- a/src/main/resources/templates/kty/find/daegu_room.html
+++ b/src/main/resources/templates/kty/find/daegu_room.html
@@ -150,45 +150,48 @@
 						<span th:text="${accommodations.acc_name}"></span>&nbsp&nbsp&nbsp
 					</div>
 					<div class="hotel_sectors_hk">
-						<span th:text="${accommodations.acc_sectors}"
-							style="color: grey;"> </span>
-					
+						<span th:text="${accommodations.acc_sectors}" style="color: grey;">
+						</span>
 
-					<div class="hotel_rating_hk">
-						<span th:switch="${accommodations.acc_rating}"
-							style="color: orange;"> <span th:case="1">★ ✩ ✩ ✩ ✩</span>
-							<span th:case="2">★ ★ ✩ ✩ ✩</span> <span th:case="3">★ ★ ★
-								✩ ✩</span> <span th:case="4">★ ★ ★ ★ ✩</span> <span th:case="5">★
-								★ ★ ★ ★</span> <span th:case="0">✩ ✩ ✩ ✩ ✩</span>
-						</span>&nbsp </span> <span
-							th:text="${accommodations.acc_rating != 0 ? accommodations.acc_rating:''}"
-							></span>
-					</div>
-					</div>
+
+						<div class="hotel_rating_hk">
+							<span th:switch="${accommodations.acc_rating}"
+								style="color: orange;"> <span th:case="1">★ ✩ ✩ ✩
+									✩</span> <span th:case="2">★ ★ ✩ ✩ ✩</span> <span th:case="3">★
+									★ ★ ✩ ✩</span> <span th:case="4">★ ★ ★ ★ ✩</span> <span th:case="5">★
+									★ ★ ★ ★</span> <span th:case="0">✩ ✩ ✩ ✩ ✩</span>
+							</span>&nbsp </span> <span
+								th:text="${accommodations.acc_rating != 0 ? accommodations.acc_rating:''}"></span>
+						</div>
 					<div class="hotel_reviews_hk">
-						<span
-							th:if="${#lists.size(accommodations.reviews) > 0}"
+						<span 
 							th:text="'(' + ${#lists.size(accommodations.reviews)} + ')'"></span>
 					</div>
-					<div class="hotel_address_hk">
-						<span th:text="${accommodations.acc_address}"
-							></span>
 					</div>
+					<div class="hotel_address_hk">
+						<span th:text="${accommodations.acc_address}"></span>
+					</div>
+					<div class="cancle_hk">예약취소 가능</div>
 					<div class="hotel_max_people_hk">
 						<span>투숙 인원 (최대) : </span>&nbsp <span
-							th:text="${accommodations.acc_max_people}"
-							></span><span>
-							명 </span>
-<!-- 							<span style="color: red; font-size: 12px; font-weight: bold;"></span> -->
+							th:text="${accommodations.acc_max_people}"></span><span> 명
+						</span>
+						<!-- 							<span style="color: red; font-size: 12px; font-weight: bold;"></span> -->
 					</div>
 
 					<div class="hotel_averPrice_hk">
-						<span class="feefee"> <span>평균금액: </span>&nbsp&nbsp
-							<span class="productAmount"
-							th:text="${accommodations.acc_averPrice}"></span> &nbsp
-							<span> 원</span>&nbsp&nbsp
+						<span class="feefee"> <span>숙박  </span>&nbsp <span
+							class="productAmount" th:text="${accommodations.acc_averPrice}"></span>
+						 <span> 원</span>&nbsp&nbsp
 						</span>
 					</div>
+<!-- 					<div class="hotel_minPrice_hk"> -->
+<!-- 						<span class="minfee"> <span>최소금액: </span>&nbsp&nbsp <span -->
+<!-- 							class="productAmount" -->
+<!-- 							th:text="${accommodation.product.product_amount}"></span> &nbsp <span> -->
+<!-- 								원</span>&nbsp&nbsp -->
+<!-- 						</span> -->
+<!-- 					</div> -->
 			</div>
 			<div class="room-photo"
 				th:style="'background-image: url(' + ${accommodations.acc_img} + ');'"></div>
