--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -90,18 +90,18 @@
   <div class="jj_carousel2">
     <div class="card-container" id="cardContainer">
       <div th:each="accommodation : ${acc}" class="card" th:style="'background-image: url(' + ${accommodation.acc_img} + '); background-repeat: no-repeat; background-size: 100% 70%;'">
-        <!-- Your content goes here -->
-    <!-- Your content goes here -->
-        <h2 class="reco_accname" th:text="${accommodation.acc_name}"></h2>
+    
+        <h2 id="reco_accname" th:text="${accommodation.acc_name}"></h2>
         <p class="start_reco_acc">
      <span th:switch="${accommodation.acc_rating}">
-        <span th:case="1"><span class="orange-star">★</span> ☆ ☆ ☆ ☆</span>
-        <span th:case="2"><span class="orange-star">★</span> <span class="orange-star">★</span> ☆ ☆ ☆</span>
-        <span th:case="3"><span class="orange-star">★</span> <span class="orange-star">★</span> <span class="orange-star">★</span> ☆ ☆</span>
-        <span th:case="4"><span class="orange-star">★</span> <span class="orange-star">★</span> <span class="orange-star">★</span> <span class="orange-star">★</span> </span>
-        <span th:case="5"><span class="orange-star">★</span> <span class="orange-star">★</span> <span class="orange-star">★</span> <span class="orange-star">★</span> <span class="orange-star">★</span></span>
+        <span th:case="1"><span class="orange-star">★</span></span>
+        <span th:case="2"><span class="orange-star">★ ★ ★</span></span>
+        <span th:case="3"><span class="orange-star">★ ★ ★</span></span>
+        <span th:case="4"><span class="orange-star">★ ★ ★ ★</span> </span>
+        <span th:case="5"><span class="orange-star">★ ★ ★ ★ ★</span>
+        
     </span>
-    <span class="font_kty_acc_rating" th:text="${accommodation.acc_rating}">
+      <span class="font_kty_acc_rating" th:text="${accommodation.acc_rating}">
 </p>
         <p id="acc_num_kty" th:text="${accommodation.id}"></p>
         <span class="reco_price_kty" th:text="${'평균가 '+accommodation.acc_averPrice + '원'}"></span>
@@ -149,7 +149,7 @@
 
 	
 	</div>
-	<!-- 푸터 -->
+	<!-- 푸터 .-->
 	<footer>
 		<div class="jj_align">
 			<ul class="jj_link">
@@ -185,15 +185,16 @@
 
 	<style>
 	.font_kty_acc_rating{
-	margin-left:5px;
 	color:black;
 	font-size:12px;
 	}
  .jj_wrapper2 {
   margin-bottom: -100px;
+    overflow-y: hidden;
 }
-.reco_accname{
-  font-size:10px;
+#reco_accname{
+
+  font-size:15px;
   margin-top:230px;
   color:black;
 }
@@ -216,7 +217,9 @@ margin-left:10px;
 }
 
 .card-container {
-  border-radius:8px;
+
+  overflow-y: hidden;
+  border-radius:10px;
   margin-left:80px;
   height:350px;
   margin-top: -50px;
@@ -233,8 +236,39 @@ margin-left:10px;
 .card-container::-webkit-scrollbar {
   display: none; /* Hide the scrollbar on Chrome, Safari, and Opera */
 }
+ ::selection {
+        background-color: transparent;
+    }
+
+    /* 드래그 중인 텍스트 스타일 변경 (옵션) */
+    ::-moz-selection {
+        background-color: transparent;
+    }
+    ::-webkit-selection {
+        background-color: transparent;
+    }
+    ::-ms-selection {
+        background-color: transparent;
+    }
+
+.stop-dragging
+{
+  -ms-user-select: none; 
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.card .orange-star,
+.card .font_kty_acc_rating,
+.card .reco_price_kty {
+  user-select: none;
+}
+
 
 .card {
+
 margin-bottom:50px;
   position: relative; /* 위치를 상대적으로 설정합니다. */
   display: inline-block;
