추천 숙소 개발

--- a/src/main/resources/templates/kty/daegu_tour10.html
+++ b/src/main/resources/templates/kty/daegu_tour10.html
@@ -15,6 +15,7 @@
 	<div class="nav-line"></div>
 	<!-- 네비게이션을 그리는1 ss선 -->
 	<div class="nav-area">
+		 <input type="button" id="current_me_position" value="내 현재 위치"> 
 		<br> <span id="daegu_top10_title">DAE BAK이 추천하는 대구 여행 코스 ❤️</span>
 		<div class="box"></div>
 	</div>
