--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -223,10 +223,10 @@ margin-bottom:50px;
 }
 
 .card-container {
-  
   overflow-y: hidden;
   border-radius:10px;
   margin-left:80px;
+  width:1040px;
   height:350px;
   margin-top: -50px;
   display: flex; /* Use flex to align cards horizontally */
