--- a/src/main/resources/templates/kty/modify_partner_regi.html
+++ b/src/main/resources/templates/kty/modify_partner_regi.html
@@ -3,6 +3,7 @@
 
 <head>
 <link rel="stylesheet" href="/css/result_partner_kty.css">
+<link rel="stylesheet" href="/css/partnerpaging.css">
 </head>
 <html layout:decorate="~{jjj/header}">
 
@@ -77,26 +78,17 @@
 			
 			
 			  <!-- 페이징처리 시작 -->
-<div th:if="${!paging.isEmpty()}">
-    <ul class="pagination-horizontal justify-content-center">
-        <!-- Previous page link -->
-        <li class="page-item" th:class="${!paging.hasPrevious} ? 'disabled'">
-            <a class="page-link" th:if="${paging.hasPrevious}" th:href="@{|?page=${paging.number-1}|}">
-                <span>이전</span>
-            </a>
+<div class="pagination">
+    <ul class="horizontal-pagination">
+        <li th:if="${currentPage > 1}">
+            <a th:href="@{/user/mypage/my_partner_reg(page=${currentPage - 1})}">이전</a>
         </li>
-
-        <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
-            th:class="${page == paging.number} ? 'active' : ''" 
-            class="page-item">
-            <a th:text="${page + 1}" class="page-link" th:class="${page == paging.number} ? 'active-page' : ''" th:href="@{|?page=${page}|}"></a>
+        <li th:each="pageNum : ${#numbers.sequence(1, totalPages)}"
+            th:class="${pageNum == currentPage ? 'active' : ''}">
+            <a th:href="@{/user/mypage/my_partner_reg(page=${pageNum})}" th:text="${pageNum}"></a>
         </li>
-
-   
-        <li class="page-item" th:class="${!paging.hasNext} ? 'disabled'">
-            <a class="page-link" th:if="${paging.hasNext}" th:href="@{|?page=${paging.number+1}|}">
-                <span>다음</span>
-            </a>
+        <li th:if="${currentPage < totalPages}">
+            <a th:href="@{/user/mypage/my_partner_reg(page=${currentPage + 1})}">다음</a>
         </li>
     </ul>
 </div>
